tests/snapshots/examples_fixtures/type_system__failing__152_array_literal_callarg_conflict_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx:4:30
  |
4 |     let _x = takes_ints([|1, "two"|])
  |                              ^^^^^
  |                              ----- expected Int, found String
== stdout ==
<not executed>
